Adicionando os outros estilos css ao index.html

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
     <!-- STYLES -->
     <link rel="stylesheet" href="../src/styles/reset.css" />
     <link rel="stylesheet" href="../src/styles/global.css" />
+    <link rel="stylesheet" href="../src/styles/main.css" />
+    <link rel="stylesheet" href="../src/styles/buttons.css" />
   </head>
   <body>
     <header>
@@ -23,7 +25,7 @@
       <section class="decodificador">
         <div class="decodificador_text">
           <label for="user_text">Digite seu texto</label>
-          <textarea name="user_text" id="user_text" cols="10" rows="10" autofocus></textarea>
+          <textarea name="user_text" id="user_text" cols="7" rows="8" autofocus></textarea>
           <button class="btn delete">Apagar</button>
         </div>
 
@@ -56,5 +58,8 @@
         </div>
       </section>
     </main>
+    <footer>
+      <p>© 2022 Copyright: <a href="https://www.linkedin.com/in/ana--ferreira/" target="_blank">Ana Ferreira</a></p>
+    </footer>
   </body>
 </html>
