--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="../src/styles/global.css" />
     <link rel="stylesheet" href="../src/styles/main.css" />
     <link rel="stylesheet" href="../src/styles/buttons.css" />
+
+    <!-- SCRIPTS -->
+    <script type="module" src="../src/scripts/index.js"></script>
   </head>
   <body>
     <header>
