--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="../src/styles/global.css" />
     <link rel="stylesheet" href="../src/styles/main.css" />
     <link rel="stylesheet" href="../src/styles/buttons.css" />
+    <link rel="stylesheet" href="../src/styles/cards.css" />
 
     <!-- SCRIPTS -->
     <script type="module" src="../src/scripts/index.js"></script>
@@ -28,7 +29,7 @@
       <section class="decodificador">
         <div class="decodificador_text">
           <label for="user_text">Digite seu texto</label>
-          <textarea name="user_text" id="user_text" cols="7" rows="8" autofocus></textarea>
+          <textarea name="user_text" id="user_text" cols="8" rows="8" autofocus></textarea>
           <button class="btn delete">Apagar</button>
         </div>
 
@@ -41,7 +42,7 @@
         </div>
       </section>
       <section class="display">
-        <div class="display_searching">
+        <div class="display_searching active">
           <img src="../src/img/procurando.svg" alt="Procurando..." />
           <div class="display_searching_text">
             <h3>Nenhuma mensagem encontrada</h3>
@@ -50,7 +51,7 @@
         </div>
 
         <div class="display_result">
-          <textarea name="display_result_text" id="display_result_text" cols="10" rows="10"></textarea>
+          <textarea name="display_result_text" id="display_result_text" cols="8" rows="8" disabled></textarea>
           <div class="display_result_buttons">
             <div class="alert_card">
               <p></p>
