--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       <section class="decodificador">
         <div class="decodificador_text">
           <label for="user_text">Digite seu texto</label>
-          <textarea name="user_text" id="user_text" cols="8" rows="8" autofocus></textarea>
+          <textarea name="user_text" id="user_text" cols="" rows="" autofocus></textarea>
           <button class="btn delete">Apagar</button>
         </div>
 
@@ -51,7 +51,7 @@
         </div>
 
         <div class="display_result">
-          <textarea name="display_result_text" id="display_result_text" cols="8" rows="8" disabled></textarea>
+          <textarea name="display_result_text" id="display_result_text" cols="" rows="" disabled></textarea>
           <div class="display_result_buttons">
             <div class="alert_card">
               <p></p>
