--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;700&display=swap" rel="stylesheet" />
 
     <!-- STYLES -->
-    <link rel="stylesheet" href="./src/styles/reset.css" />
-    <link rel="stylesheet" href="./src/styles/global.css" />
-    <link rel="stylesheet" href="./src/styles/main.css" />
-    <link rel="stylesheet" href="./src/styles/buttons.css" />
-    <link rel="stylesheet" href="./src/styles/cards.css" />
+    <link rel="stylesheet" href="src/styles/reset.css" />
+    <link rel="stylesheet" href="src/styles/global.css" />
+    <link rel="stylesheet" href="src/styles/main.css" />
+    <link rel="stylesheet" href="src/styles/buttons.css" />
+    <link rel="stylesheet" href="src/styles/cards.css" />
 
     <!-- SCRIPTS -->
-    <script type="module" src="./src/scripts/index.js"></script>
+    <script type="module" src="src/scripts/index.js"></script>
   </head>
   <body>
     <header>
-      <h1><img src="./src/img/alura.svg" alt="Logo Alura" /></h1>
+      <h1><img src="src/img/alura.svg" alt="Logo Alura" /></h1>
     </header>
     <main>
       <section class="decodificador">
@@ -34,7 +34,7 @@
         </div>
 
         <div class="decodificador_buttons">
-          <span><img src="./src/img/exclamation-circle.svg" alt="Sinal de exclamação." /> Apenas letras minúsculas e sem acento!</span>
+          <span><img src="src/img/exclamation-circle.svg" alt="Sinal de exclamação." /> Apenas letras minúsculas e sem acento!</span>
           <div>
             <button class="btn encrypt">Criptografar</button>
             <button class="btn decrypt">Descriptografar</button>
