--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </section>
       <section class="display">
         <div class="display_searching active">
-          <img src="../src/img/procurando.svg" alt="Procurando..." />
+          <img src="src/img/procurando.svg" alt="Procurando..." />
           <div class="display_searching_text">
             <h3>Nenhuma mensagem encontrada</h3>
             <p>Digite um texto que você deseja criptografar ou descriptografar.</p>
